BE - working on swagger documentation
